# rustic-airlines

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
certs/: Makefile  cert.crt  cert.key
driver/: Cargo.toml
driver/examples/: client.rs  client_two.rs
driver/src/: lib.rs  server.rs  tls.rs
flight-sim/: Cargo.toml
flight-sim/src/: main.rs
flight-sim/src/types/: airport.rs  client.rs  flight.rs  flight_status.rs  mod.rs  sim_error.rs  simulation.rs  timer.rs
gossip/: Cargo.toml
gossip/src/: lib.rs  messages.rs
gossip/src/structures/: application_state.rs  endpoint_state.rs  heartbeat_state.rs  mod.rs
graphical-interface/: Cargo.toml  airports_ar.csv
graphical-interface/examples/: airports.rs
graphical-interface/src/: db.rs  lib.rs  main.rs  map.rs  state.rs
graphical-interface/src/plugins/: airports.rs  flights.rs  mod.rs
graphical-interface/src/types/: airport.rs  country_tracker.rs  flight.rs  flight_info.rs  flight_status.rs  map_bounds.rs  mod.rs
graphical-interface/src/widgets/: add_flight.rs  airport.rs  airports.rs  flight.rs  flights_table.rs  mod.rs
logger/: Cargo.toml
logger/src/: lib.rs
native_protocol/: Cargo.toml
native_protocol/src/: errors.rs  frame.rs  header.rs  lib.rs  types.rs
native_protocol/src/messages/: auth.rs  error.rs  mod.rs  query.rs
node/: Cargo.toml
node/src/: errors.rs  internode_protocol_handler.rs  lib.rs  open_query_handler.rs  utils.rs
node/src/internode_protocol/: message.rs  mod.rs  query.rs  response.rs
node/src/query_execution/: alter_keyspace.rs  alter_table.rs  create_keyspace.rs  create_table.rs  delete.rs  drop_keyspace.rs  drop_table.rs  insert.rs  mod.rs  select.rs  update.rs  use_cql.rs
node/src/storage_engine/: data_redistribution.rs  delete.rs  errors.rs  insert.rs  keyspace_operations.rs  mod.rs  select.rs  table_operations.rs  update.rs
node_launcher/: Cargo.toml  Makefile  run.bat
partitioner/: Cargo.toml
partitioner/src/: errors.rs  lib.rs
query-creator/: Cargo.toml
query-creator/src/: errors.rs  lib.rs  logical_operator.rs  operator.rs  utils.rs
query-creator/src/clauses/: condition.rs  delete_cql.rs  if_cql.rs  insert_cql.rs  into_cql.rs  mod.rs  order_by_cql.rs  recursive_parser.rs  select_cql.rs  (+4 more)
repl/: Cargo.toml  queries.txt
repl/src/: main.rs
tests/: Cargo.toml  integration_tests.rs
(+15 files in other folders)
